--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.application.name=MySpringBoot3Project
 myboot.name=Spring
 myboot.age=${random.int(1,100)}
 myboot.fullName=${myboot.name} Boot
+
+# 현재 활상화된 profile - prod|test
+spring.profiles.active=test
+
