Culog level set

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ myboot.fullName=${myboot.name} Boot
 # 현재 활상화된 profile - prod|test
 spring.profiles.active=test
 
+#log file이 저장될 디렉토리 설정
+logging.file.path=logs
